<resources>
    <string name="app_name">TorchExpo</string>
    <string name="app_description">Collection of models and extensions for mobile deployment in PyTorch</string>

    <string name="options_menu_about">About</string>
    <string name="options_menu_github">GitHub</string>
    <string name="options_menu_contact_us">Contact us</string>

    <string name="collection">Collection</string>
    <string name="model">Model</string>
    <string name="publisher">Publisher</string>
    <string name="collections">Collections</string>
    <string name="models">Models</string>
    <string name="publishers">Publishers</string>
    <string name="download">Download</string>
    <string name="play">Open Playground</string>
    <string name="choose_image">Choose Image</string>
    <string name="predict">Predict</string>
    <string name="source">Source</string>
    <string name="licenses"><u>LICENSES</u></string>
    <string name="built_with_pytorch">Built with PyTorch</string>
    <string name="more_variants_coming_soon">Variants of this model will be coming soon!</string>
    <string name="more_models_coming_soon">Support for more models are coming soon!</string>

    <string name="text_to_classify">Text to classify</string>
    <string name="text">Text</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="load_sample">Load Sample</string>
    <string name="model_name">Model Name</string>
    <string name="model_class">CLASS</string>
    <string name="model_sentiment">SENTIMENT</string>
    <string name="model_score">SCORE</string>
    <string name="model_object">OBJECT</string>
    <string name="loading">Loading</string>
    <string name="default_score">0.00</string>
    <string name="score_precision">%.2f</string>
    <string name="score_more_precision">%.5f</string>

    <string name="err_no_network_message">Nothing to see here</string>
    <string name="err_no_connection">No connection</string>
    <string name="err_no_email_client">Please select an email client</string>
    <string name="your_question">Your Question</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
