<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="io.github.prabhuomkar.torchexpo.ui.playground.nlp.NLPViewModel" />

        <variable
            name="loadedModelName"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.playground.nlp.SentimentAnalysisFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:hint="@string/text_to_classify"
            app:layout_constraintBottom_toTopOf="@+id/actionLoadSample"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/actionLoadSample"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{(view) -> viewModel.loadIMDbSample(view)}"
            android:paddingVertical="8dp"
            android:text="@string/load_sample"
            android:textColor="@color/colorPrimary"
            app:icon="@drawable/ic_link"
            app:iconSize="24dp"
            app:iconTint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/playground_footer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.46" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/actionPredict"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{(view) -> viewModel.runSentimentAnalysis(view, loadedModelName)}"
            android:paddingVertical="8dp"
            android:text="@string/predict"
            android:textColor="@color/colorPrimary"
            app:icon="@drawable/pytorch_logo"
            app:iconSize="24dp"
            app:iconTint="@null"
            app:layout_constraintBottom_toTopOf="@id/playground_footer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.42" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/playground_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/modelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/model_name"
                android:text="@{loadedModelName}"
                android:textColor="@color/colorAccent"
                android:textColorHint="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/sentiment_heading"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sentiment_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/model_sentiment"
                android:textColor="#AAA"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/sentiment_positive_text"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/score_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/model_score"
                android:textColor="#AAA"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/sentiment_positive_score"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/sentiment_positive_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/positive"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/sentiment_negative_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.65" />

            <TextView
                android:id="@+id/sentiment_positive_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="end"
                android:text="@string/default_score"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/sentiment_negative_score"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.35" />

            <TextView
                android:id="@+id/sentiment_negative_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/negative"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.65" />

            <TextView
                android:id="@+id/sentiment_negative_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="end"
                android:text="@string/default_score"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.35" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>